# SISTOPE-LAB2-1-2024

./: .gitignore  CMakeLists.txt  README.md
Ejemplos del ayudante/Ayudantía 1 GETOPT/: Ayudantía 1.pptx  ejemplo.c
Ejemplos del ayudante/Ayudantía 2 FILES/: Ayudantía 2.pptx
Ejemplos del ayudante/Ayudantía 2 FILES/Ejemplo/: Makefile  funciones.h  funciones_ayudante.c
Ejemplos del ayudante/Ejemplos BMP/: main.c
LAB/: CMakeLists.txt  Makefile  estructuras.h  fbroker.h  funciones.h  fworker.h  lab1.c  lab2.c  lectura.c  lectura.h  resultados.c  resultados.h
LAB/broker/: broker.c  fbroker.c  fbroker.h
LAB/filtros/: filtros-aplicados.c  filtros.c  filtros.h
LAB/funciones/: funciones.c  funciones.h
LAB/lectura/: lectura.c  lectura.h
LAB/resultados/: resultados.c  resultados.h
LAB/worker/: fworker.c  fworker.h  worker.c
Pruebas/: CMakeLists.txt  comandos.txt  makefile-cosas.txt  proceso-pruebas-2.c  proceso-pruebas.c
